Update HTML structure and refactor object creation in promo.js

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
         <script src="./promo.js" defer></script>
         <title>OOP in JS</title>
     </head>
-    <body></body>
+    <body>
+        <p id="demo"></p>
+    </body>
 </html>
