Remove unnecessary elements from the body in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,5 @@
         <script src="./promo.js" defer></script>
         <title>OOP in JS</title>
     </head>
-    <body>
-        <p id="demo"></p>
-    </body>
+    <body></body>
 </html>
